[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lytix-py"
version = "4.0.0"
authors = [
  { name="Lytix", email="support@lytix.com" },
]
description = "Official Lytix Client Packages"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "requests==2.31.0",
  "urllib3==2.2.1",
]

[project.urls]
Homepage = "https://github.com/Lytix-Labs/lytix-py"
Issues = "https://github.com/Lytix-Labs/lytix-py/issues"

